--- a/BukenTrainerPortal/Views/Athletes/Index.cshtml
+++ b/BukenTrainerPortal/Views/Athletes/Index.cshtml
@@ -1,1 +1,24 @@
-<h1>Athletes List</h1>
+@model List<Athlete>
+
+  <h1>Athletes List</h1>
+  <table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Coach ID</th>
+        <th>Coach Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      @foreach(var obj in Model)
+      {
+      <tr>
+        <td>@obj.FirstName</td>
+        <td>@obj.LastName</td>
+        <td>@obj.CoachId</td>
+        <td>@obj.Coach.FirstName @obj.Coach.LastName</td>
+      </tr>
+      }
+    </tbody>
+  </table>
