feat(AthleteView): Add bootstrap theme and icons

--- a/BukenTrainerPortal/Views/Athletes/Index.cshtml
+++ b/BukenTrainerPortal/Views/Athletes/Index.cshtml
@@ -1,6 +1,11 @@
 @model List<Athlete>
 
-  <h1>Athletes List</h1>
+  <div class="container text-center">
+    <div class="row align-items-start">
+      <i class="bi bi-person-badge-fill"></i>
+      <h1>Athletes List</h1>
+    </div>
+  </div>
   <table class="table table-bordered table-striped">
     <thead>
       <tr>
